--- a/src/NewRelic.Microsoft.SqlServer.Plugin/NewRelic.Microsoft.SqlServer.Plugin.csproj
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/NewRelic.Microsoft.SqlServer.Plugin.csproj
@@ -37,6 +37,12 @@
     <Reference Include="CommandLine">
       <HintPath>..\..\packages\CommandLineParser.1.9.71\lib\net35\CommandLine.dll</HintPath>
     </Reference>
+    <Reference Include="NewRelic.Platform.Binding.DotNET">
+      <HintPath>..\..\lib\NewRelic.Platform.Binding.DotNET.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\packages\Newtonsoft.Json.5.0.4\lib\net35\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
@@ -47,12 +53,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants.cs" />
     <Compile Include="Dapper.cs" />
     <Compile Include="InstallController.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryTypes\QueryStat.cs" />
+    <Compile Include="SampleMetricGenerator.cs" />
     <Compile Include="ServiceConstants.cs" />
     <Compile Include="ServiceProcessInstaller.cs">
       <SubType>Component</SubType>
@@ -64,6 +72,7 @@
     <Compile Include="SqlMonitorServiceInstaller.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Communication\SqlRequest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
