Queries found via reflection are now objects with enough details for testing and logging, rather than simply Func's Implemented the two new sql queries Added support for a single query type to support multiple query resources

--- a/src/NewRelic.Microsoft.SqlServer.Plugin.Tests/NewRelic.Microsoft.SqlServer.Plugin.Tests.csproj
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin.Tests/NewRelic.Microsoft.SqlServer.Plugin.Tests.csproj
@@ -55,6 +55,15 @@
   <ItemGroup>
     <EmbeddedResource Include="Core\ExampleEmbeddedFile.sql" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Core\AnotherQuery.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Queries\ExampleEmbeddedFile.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Core\YetAnotherQuery.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
