--- a/src/NewRelic.Microsoft.SqlServer.Plugin/NewRelic.Microsoft.SqlServer.Plugin.csproj
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/NewRelic.Microsoft.SqlServer.Plugin.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="Constants.cs" />
     <Compile Include="Core\DapperWrapper.cs" />
+    <Compile Include="Core\ExtensionsForReflection.cs" />
     <Compile Include="Core\PollingThread.cs" />
     <Compile Include="Core\PollingThreadSettings.cs" />
     <Compile Include="Core\SqlMonitorQueryAttribute.cs" />
@@ -68,6 +69,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryLocator.cs" />
+    <Compile Include="QueryTypes\BackupStatus.cs" />
     <Compile Include="QueryTypes\FileIoView.cs" />
     <Compile Include="QueryTypes\SqlConnections.cs" />
     <Compile Include="QueryTypes\Top25CostlyQueries.cs" />
@@ -84,6 +86,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Communication\SqlRequest.cs" />
+    <Compile Include="SqlMonitorQuery.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -92,6 +95,10 @@
     <EmbeddedResource Include="Queries\FileIOView.sql" />
     <EmbeddedResource Include="Queries\SQLConnections.sql" />
     <EmbeddedResource Include="Queries\Top25CostlyQueries.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Queries\BackupStatus.sql" />
+    <EmbeddedResource Include="Queries\LogBackupStatus.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
