Added configuration implementation   Use --config-file to load the configuration from another file   Implemented with configuration types from BCL   Added tests to confirm app.config sample can deserialize into configuration types   Config is passed via Settings object Added TaskParallelLibrary for .NET 3.5 Changed polling to use TPL for paralellization

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,11 @@ _ReSharper.*/
 packages/*
 *DS_Store
 *.log
+
+# local/dev artifact dir
+local/
+
+# NuGet Packages Directory
+!packages/
+packages/*
+!packages/repositories.config
