--- a/src/NewRelic.Microsoft.SqlServer.Plugin.Tests/packages.config
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin.Tests/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="NSubstitute" version="1.6.0.0" targetFramework="net35" />
   <package id="NUnit" version="2.6.2" targetFramework="net35" />
+  <package id="TaskParallelLibrary" version="1.0.2856.0" targetFramework="net35" />
 </packages>
