--- a/src/NewRelic.Microsoft.SqlServer.Plugin/NewRelic.Microsoft.SqlServer.Plugin.csproj
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/NewRelic.Microsoft.SqlServer.Plugin.csproj
@@ -47,18 +47,30 @@
       <HintPath>..\..\packages\Newtonsoft.Json.5.0.4\lib\net35\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
     <Reference Include="System.ServiceProcess" />
+    <Reference Include="System.Threading">
+      <HintPath>..\..\packages\TaskParallelLibrary.1.0.2856.0\lib\Net35\System.Threading.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\ConfigurationParser.cs" />
+    <Compile Include="Configuration\NewRelicConfigurationSection.cs" />
+    <Compile Include="Configuration\ServiceElement.cs" />
+    <Compile Include="Configuration\Settings.cs" />
+    <Compile Include="Configuration\SqlServerToMonitor.cs" />
+    <Compile Include="Configuration\SqlServerCollection.cs" />
+    <Compile Include="Configuration\SqlServerSection.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Core\DapperWrapper.cs" />
     <Compile Include="Core\ExtensionsForReflection.cs" />
+    <Compile Include="Core\ExtensionsForTask.cs" />
     <Compile Include="Core\PollingThread.cs" />
     <Compile Include="Core\PollingThreadSettings.cs" />
     <Compile Include="Core\SqlMonitorQueryAttribute.cs" />
@@ -89,6 +101,9 @@
     <Compile Include="SqlMonitorQuery.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
