--- a/src/NewRelic.Microsoft.SqlServer.Plugin/packages.config
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/packages.config
@@ -3,4 +3,5 @@
   <package id="CommandLineParser" version="1.9.71" targetFramework="net35" />
   <package id="log4net" version="2.0.0" targetFramework="net35" />
   <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net35" />
+  <package id="TaskParallelLibrary" version="1.0.2856.0" targetFramework="net35" />
 </packages>
