--- a/src/NewRelic.Microsoft.SqlServer.Plugin/NewRelic.Microsoft.SqlServer.Plugin.csproj
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/NewRelic.Microsoft.SqlServer.Plugin.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Core\ServiceProcessInstaller.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="QueryTypes\WaitState.cs" />
     <Compile Include="SqlMonitor.cs" />
     <Compile Include="Core\SqlMonitorService.cs">
       <SubType>Component</SubType>
@@ -125,6 +126,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Queries\RecompileDetail.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Queries\WaitStates.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
