Added MetricPattern to allow a query to determine how the metric looks. This is crucial for queries with > 1 query per type. Changed MetricMapper to dynamically report metrics by finding numeric properties, by convention. Added MetricAttribute to allow a property to be ignored and the metric name overridden so it doesn't have to be the same as the DB column. Refactored query handling to be more dynamic and consistent.
Removed IQueryResult and put metric setting in the

--- a/src/NewRelic.Microsoft.SqlServer.Plugin.Tests/NewRelic.Microsoft.SqlServer.Plugin.Tests.csproj
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin.Tests/NewRelic.Microsoft.SqlServer.Plugin.Tests.csproj
@@ -55,7 +55,9 @@
     <Compile Include="MetricMapperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\QueryTypeValidationTests.cs" />
+    <Compile Include="QueryContextTests.cs" />
     <Compile Include="QueryLocatorTests.cs" />
+    <Compile Include="SqlMonitoryQueryTests.cs" />
     <Compile Include="TestHelper.cs" />
   </ItemGroup>
   <ItemGroup>
