--- a/src/NewRelic.Microsoft.SqlServer.Plugin/NewRelic.Microsoft.SqlServer.Plugin.csproj
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/NewRelic.Microsoft.SqlServer.Plugin.csproj
@@ -73,18 +73,21 @@
     <Compile Include="Core\Extensions\ExtensionsForEnumerable.cs" />
     <Compile Include="Core\Extensions\ExtensionsForReflection.cs" />
     <Compile Include="Core\Extensions\ExtensionsForTask.cs" />
+    <Compile Include="Core\MetricAttribute.cs" />
     <Compile Include="Core\PollingThread.cs" />
     <Compile Include="Core\PollingThreadSettings.cs" />
-    <Compile Include="Core\SqlMonitorQueryAttribute.cs" />
+    <Compile Include="Core\QueryAttribute.cs" />
     <Compile Include="Core\Dapper.cs" />
     <Compile Include="Core\InstallController.cs" />
     <Compile Include="MetricMapper.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryContext.cs" />
     <Compile Include="QueryLocator.cs" />
     <Compile Include="QueryTypes\BackupStatus.cs" />
     <Compile Include="QueryTypes\FileIoView.cs" />
+    <Compile Include="QueryTypes\IDatabaseMetric.cs" />
     <Compile Include="QueryTypes\IQueryResult.cs" />
     <Compile Include="QueryTypes\RecompileDetail.cs" />
     <Compile Include="QueryTypes\RecompileSummary.cs" />
