Added the mechanism to include and exclude certain databases from our metric gathering. These can be specified by using the <includes> and <excludes> elements under <sqlServer> element in the newrelic section of the configuration file. Database names can be the full name of the DB or can contain a wild card and will match all relevant database names.
Configuration mechanism is now in place, but queries still need to be updated to support this new feature.

--- a/src/NewRelic.Microsoft.SqlServer.Plugin.Tests/Configuration/app.config
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin.Tests/Configuration/app.config
@@ -7,8 +7,16 @@
   <newRelic>
     <service licenseKey="FooGuid" pollIntervalSeconds="45" useSsl="true" />
     <sqlServers>
-      <sqlServer name="Local" connectionString="Server=.;Database=master;Trusted_Connection=True;" />
-      <sqlServer name="Important Server" connectionString="Server=192.168.10.123,1234;Database=master;User Id=foo;Password=bar;" />
+      <sqlServer name="Local" connectionString="Server=.;Database=master;Trusted_Connection=True;" includeSystemDatabases="true"/>
+      <sqlServer name="Important Server" connectionString="Server=192.168.10.123,1234;Database=master;User Id=foo;Password=bar;">
+        <includes>
+          <database name="Northwind"/>
+        </includes>
+        <excludes>
+          <database name="foo*"/>
+          <database name="bar%"/>
+        </excludes>
+      </sqlServer>
     </sqlServers>
   </newRelic>
 </configuration>
