--- a/src/NewRelic.Microsoft.SqlServer.Plugin/app.config
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/app.config
@@ -34,9 +34,44 @@
       ======
       Connection string to the SQL Server.
       ######
+      
+      includeSystemDatabases [Optional]
+      ======
+      Indicates if the system databases (tempdb, master, model, msdb) should be included in metric gathering.
+      Defaults to false
+      ######
       -->
-      <sqlServer name="SQLExpress Local" connectionString="Server=.\SQLExpress;Database=master;Trusted_Connection=True;" />
-      <sqlServer name="Test Server" connectionString="Server=.,11433;Database=master;Trusted_Connection=True;" />
+      <sqlServer name="SQLExpress Local" connectionString="Server=.\SQLExpress;Database=master;Trusted_Connection=True;" includeSystemDatabases="false"/>
+      <sqlServer name="Test Server" connectionString="Server=.,11433;Database=master;Trusted_Connection=True;">
+        <!-- 
+          includes [Optional]
+          ==========
+          Contains a set of database elements that define explicitly which databases will be included in metric gathering
+          ##########
+          -->
+        <includes>
+          <!-- 
+          name [required]
+          ==========
+          Indicates the name of the desired database. When wildcards (* or %)  are used, the element will represent all database names matching the pattern.
+           ex: 
+            <database name="TempDa*"/>
+            or
+            <database name="TempDa%"/>
+          ##########
+          -->
+          <database name="Northwind"/>
+        </includes>
+        <!-- 
+          excludes [Optional]
+          ==========
+          Contains a set of database elements that define explicitly which databases will be excluded from metric gathering
+          ##########
+          -->
+        <excludes>
+          <database name="TestData"/>
+        </excludes>
+      </sqlServer>
     </sqlServers>
   </newRelic>
 </configuration>
