Separated the SqlPoller from the MetricCollector and placed them in their own classes  - MetricCollector queries the server and send the data to New Relic  - SqlPoller has the logic of starting, stopping, and coordinating polling passes Added support for named metric patterns where a {placeholder} is replaced with the value of the property named in {placeholder}  - Required for the WaitState query  - Many tests to validate it  - Not yet optimized Changed QUeryContext to encapsulate the query and handle adding metrics Fixed cartesian bug that reported WAY more metrics than necessary. This was due to ignoring Demeter's advice. Cleaned up remaining metric QueryTypes Changed log file to roll on size, especially the optional verbose logs Changed IncludeSystemDatabases config setting to bool as it is easier to work with over string Implemented AssemblyInformationalVersion and now send it as the Agent's version Lots of extra R# formatting

--- a/src/NewRelic.Microsoft.SqlServer.Plugin/NewRelic.Microsoft.SqlServer.Plugin.csproj
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/NewRelic.Microsoft.SqlServer.Plugin.csproj
@@ -23,6 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -90,7 +91,6 @@
     <Compile Include="QueryTypes\BackupStatus.cs" />
     <Compile Include="QueryTypes\FileIoView.cs" />
     <Compile Include="QueryTypes\IDatabaseMetric.cs" />
-    <Compile Include="QueryTypes\IQueryResult.cs" />
     <Compile Include="QueryTypes\RecompileDetail.cs" />
     <Compile Include="QueryTypes\RecompileSummary.cs" />
     <Compile Include="QueryTypes\SqlConnections.cs" />
@@ -101,7 +101,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="QueryTypes\WaitState.cs" />
-    <Compile Include="SqlMonitor.cs" />
+    <Compile Include="MetricCollector.cs" />
     <Compile Include="Core\SqlMonitorService.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -110,6 +110,7 @@
     </Compile>
     <Compile Include="Communication\SqlRequest.cs" />
     <Compile Include="SqlMonitorQuery.cs" />
+    <Compile Include="Core\SqlPoller.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config">
