--- a/src/NewRelic.Microsoft.SqlServer.Plugin/log4net.config
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/log4net.config
@@ -23,7 +23,7 @@
 
 		<!-- Verbose logging of output from SQL queries. -->
 		<logger name="VerboseSqlOutput">
-			<level value="OFF" /> <!-- Change to INFO for output to appear -->
+			<level value="DEBUG" /> <!-- Change to INFO for output to appear -->
 			<appender-ref ref="VerboseSqlOutputFileAppender" />
 		</logger>
 
@@ -41,12 +41,12 @@
 		</appender>
 
 		<appender name="SqlFileAppender" type="log4net.Appender.RollingFileAppender">
-			<param name="File" value="..\..\..\..\local\logs\SqlMonitor" />
-			<param name="DatePattern" value=".yyyyMMdd&quot;.log&quot;" />
+			<param name="File" value="..\..\..\..\local\logs\SqlMonitor.log" />
 			<param name="AppendToFile" value="true" />
-			<param name="RollingStyle" value="Date" />
+			<param name="RollingStyle" value="Size" />
 			<param name="StaticLogFileName" value="false" />
-			<param name="MaxSizeRollBackups" value="30" />
+			<param name="MaxSizeRollBackups" value="1" />
+			<param name="MaximumFileSize" value="5MB" />
 			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
 			<layout type="log4net.Layout.PatternLayout">
 				<conversionPattern value="%date [%thread] %-5level - %message%newline" />
@@ -54,12 +54,12 @@
 		</appender>
 
 		<appender name="VerboseSqlOutputFileAppender" type="log4net.Appender.RollingFileAppender">
-			<param name="File" value="..\..\..\..\local\logs\VerboseSqlOutput" />
-			<param name="DatePattern" value=".yyyyMMdd&quot;.log&quot;" />
+			<param name="File" value="..\..\..\..\local\logs\VerboseSqlOutput.log" />
 			<param name="AppendToFile" value="true" />
-			<param name="RollingStyle" value="Date" />
+			<param name="RollingStyle" value="Size" />
 			<param name="StaticLogFileName" value="false" />
-			<param name="MaxSizeRollBackups" value="30" />
+			<param name="MaxSizeRollBackups" value="1" />
+			<param name="MaximumFileSize" value="10MB" />
 			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
 			<layout type="log4net.Layout.PatternLayout">
 				<conversionPattern value="%date [%thread] %-5level - %message%newline" />
@@ -67,12 +67,12 @@
 		</appender>
 
 		<appender name="VerboseMetricOutputFileAppender" type="log4net.Appender.RollingFileAppender">
-			<param name="File" value="..\..\..\..\local\logs\VerboseMetricOutput" />
-			<param name="DatePattern" value=".yyyyMMdd&quot;.log&quot;" />
+			<param name="File" value="..\..\..\..\local\logs\VerboseMetricOutput.log" />
 			<param name="AppendToFile" value="true" />
-			<param name="RollingStyle" value="Date" />
+			<param name="RollingStyle" value="Size" />
 			<param name="StaticLogFileName" value="false" />
-			<param name="MaxSizeRollBackups" value="30" />
+			<param name="MaxSizeRollBackups" value="1" />
+			<param name="MaximumFileSize" value="10MB" />
 			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
 			<layout type="log4net.Layout.PatternLayout">
 				<conversionPattern value="%date [%thread] %-5level - %message%newline" />
