Updated Recompile, Backup, and FileIOView queries to support Include/Exclude databases. Fixing up tests that were failing due to Include/Exclude changes. Added log message displaying settings object to allow for verification that settings were read and set correctly.

--- a/src/NewRelic.Microsoft.SqlServer.Plugin.Tests/Configuration/app.config
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin.Tests/Configuration/app.config
@@ -7,14 +7,15 @@
   <newRelic>
     <service licenseKey="FooGuid" pollIntervalSeconds="45" useSsl="true" />
     <sqlServers>
-      <sqlServer name="Local" connectionString="Server=.;Database=master;Trusted_Connection=True;" includeSystemDatabases="true"/>
-      <sqlServer name="Important Server" connectionString="Server=192.168.10.123,1234;Database=master;User Id=foo;Password=bar;">
+      <sqlServer name="Local" connectionString="Server=.;Database=master;Trusted_Connection=True;" includeSystemDatabases="true">
         <includes>
           <database name="Northwind"/>
         </includes>
+      </sqlServer>
+      <sqlServer name="Important Server" connectionString="Server=192.168.10.123,1234;Database=master;User Id=foo;Password=bar;">
         <excludes>
-          <database name="foo*"/>
-          <database name="bar%"/>
+          <database name="foo"/>
+          <database name="bar"/>
         </excludes>
       </sqlServer>
     </sqlServers>
