Collapsed much of the logic required to implement IDatabaseMetric into an abstract base class DatabaseMetricBase, which does the work of implementing Parameterizing the query for the appropriate includes/excludes. The base class requires that the inheriting concrete type specify the WhereClauseToken type (which represents either begining a WHERE clause, or adding to it with an AND) and the sql field that represents the databse name.
Wrote a test that asserts all DatabaseMetricBase classes correctly perform their specific include and exclude.

--- a/src/NewRelic.Microsoft.SqlServer.Plugin/NewRelic.Microsoft.SqlServer.Plugin.csproj
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/NewRelic.Microsoft.SqlServer.Plugin.csproj
@@ -89,6 +89,7 @@
     <Compile Include="QueryContext.cs" />
     <Compile Include="QueryLocator.cs" />
     <Compile Include="QueryTypes\BackupStatus.cs" />
+    <Compile Include="QueryTypes\DatabaseMetricBase.cs" />
     <Compile Include="QueryTypes\FileIoView.cs" />
     <Compile Include="QueryTypes\IDatabaseMetric.cs" />
     <Compile Include="QueryTypes\RecompileDetail.cs" />
@@ -110,6 +111,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Communication\SqlRequest.cs" />
+    <Compile Include="QueryTypes\WhereClauseTokenEnum.cs" />
     <Compile Include="SqlMonitorQuery.cs" />
     <Compile Include="Core\SqlPoller.cs" />
   </ItemGroup>
