--- a/src/NewRelic.Microsoft.SqlServer.Plugin.Tests/NewRelic.Microsoft.SqlServer.Plugin.Tests.csproj
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin.Tests/NewRelic.Microsoft.SqlServer.Plugin.Tests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Core\ExtensionsForAssemblyTests.cs" />
     <Compile Include="FileIoViewTests.cs" />
     <Compile Include="MetricMapperTests.cs" />
+    <Compile Include="ParameterizedQueryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\QueryTypeValidationTests.cs" />
     <Compile Include="QueryContextTests.cs" />
