Clean up build script for alpha release Clean app.config to match install instructions

--- a/src/NewRelic.Microsoft.SqlServer.Plugin/app.config
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/app.config
@@ -9,12 +9,6 @@
     licenseKey [Required]
     ==========
     Specify your New Relic license key.
-    ##########
-    
-    useSsl [Default: false]
-    ======
-    true: communicate with the collector over HTTPS
-    false: communicate with the collector over HTTP
     ######
 
     pollIntervalSeconds [Default: 60]
@@ -22,7 +16,7 @@
     Specify the frequency of the polling in seconds.
     ######
     -->
-    <service licenseKey="YOUR_KEY_HERE" pollIntervalSeconds="60" useSsl="false" />
+    <service licenseKey="YOUR_KEY_HERE" pollIntervalSeconds="60" />
     <sqlServers>
       <!-- 
       name [Required]
@@ -41,36 +35,18 @@
       Defaults to false
       ######
       -->
-      <sqlServer name="SQLExpress Local" connectionString="Server=.\SQLExpress;Database=master;Trusted_Connection=True;" includeSystemDatabases="false"/>
-      <sqlServer name="Test Server" connectionString="Server=.,11433;Database=master;Trusted_Connection=True;">
-        <!-- 
-          includes [Optional]
-          ==========
-          Contains a set of database elements that define explicitly which databases will be included in metric gathering
-          ##########
-          -->
-        <includes>
-          <!-- 
-          name [required]
-          ==========
-          Indicates the name of the desired database. When wildcards (* or %)  are used, the element will represent all database names matching the pattern.
-           ex: 
-            <database name="TempDa*"/>
-            or
-            <database name="TempDa%"/>
-          ##########
-          -->
-          <database name="Northwind"/>
-        </includes>
-        <!-- 
-          excludes [Optional]
-          ==========
-          Contains a set of database elements that define explicitly which databases will be excluded from metric gathering
-          ##########
-          -->
-        <excludes>
-          <database name="TestData"/>
-        </excludes>
+      <sqlServer name="Production Database" connectionString="Server=.\SQLExpress;Database=master;Trusted_Connection=True;" includeSystemDatabases="false">
+        <!-- Include OR exclude database from metric gathering reporting.-->
+        <!-- includes [Optional]: Contains a set of database elements that define explicitly which databases will be included in metric gathering. -->
+        <!--        <includes>-->
+        <!-- name [Required]: Indicates the name of the desired database. -->
+        <!--          <database name="Northwind"/>-->
+        <!--        </includes>-->
+        <!-- excludes [Optional]: Contains a set of database elements that define explicitly which databases will be excluded from metric gathering. -->
+        <!--        <excludes>-->
+        <!-- name [Required]: Indicates the name of the database to exclude. -->
+        <!--          <database name="TestData"/>-->
+        <!--        </excludes>-->
       </sqlServer>
     </sqlServers>
   </newRelic>
