--- a/src/NewRelic.Microsoft.SqlServer.Plugin/log4net.config
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/log4net.config
@@ -1,83 +1,83 @@
 <configuration>
-	<configSections>
-		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
-	</configSections>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
+  </configSections>
 
-	<log4net>
-		<!-- ROOT logging is least privilagles so Debug will log Debug -thru- FATAL
+  <log4net>
+    <!-- ROOT logging is least privilagles so Debug will log Debug -thru- FATAL
 				  WARN will log - thru - FATAL but exclude INFO, DEBUG
 				  YOU can trace your code by setting the Logging to WARN and 
 				  overriding your loghelper method using the EnumLogger.INFO 
 				  If you set the logging too DEBUG you will get all the service (Queries,ChangeSet) traces
 		-->
-		<!-- ALL, DEBUG, INFO, WARN, ERROR, FATAL, OFF -->
-		<root>
-			<level value="ALL" />
-		</root>
+    <!-- ALL, DEBUG, INFO, WARN, ERROR, FATAL, OFF -->
+    <root>
+      <level value="ALL" />
+    </root>
 
-		<logger name="SqlMonitor">
-			<level value="ALL" />
-			<appender-ref ref="SqlFileAppender" />
-			<appender-ref ref="ConsoleAppender" />
-		</logger>
+    <logger name="SqlMonitor">
+      <level value="ALL" />
+      <appender-ref ref="SqlFileAppender" />
+      <appender-ref ref="ConsoleAppender" />
+    </logger>
 
-		<!-- Verbose logging of output from SQL queries. -->
-		<logger name="VerboseSqlOutput">
-			<level value="DEBUG" /> <!-- Change to INFO for output to appear -->
-			<appender-ref ref="VerboseSqlOutputFileAppender" />
-		</logger>
+    <!-- Verbose logging of output from SQL queries. -->
+    <logger name="VerboseSqlOutput">
+      <level value="DEBUG" /> <!-- Change to INFO for output to appear -->
+      <appender-ref ref="VerboseSqlOutputFileAppender" />
+    </logger>
 
-		<!-- Verbose logging of metrics recorded and uploaded. -->
-		<logger name="VerboseMetricOutput">
-			<level value="DEBUG" /> <!-- Change to INFO for output to appear -->
-			<appender-ref ref="VerboseMetricOutputFileAppender" />
-		</logger>
+    <!-- Verbose logging of metrics recorded and uploaded. -->
+    <logger name="VerboseMetricOutput">
+      <level value="DEBUG" /> <!-- Change to INFO for output to appear -->
+      <appender-ref ref="VerboseMetricOutputFileAppender" />
+    </logger>
 
-		<!-- ConsoleAppender -->
-		<appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
-			<layout type="log4net.Layout.PatternLayout">
-				<param name="ConversionPattern" value="%d [%t] %-5p %m%n" />
-			</layout>
-		</appender>
+    <!-- ConsoleAppender -->
+    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
+      <layout type="log4net.Layout.PatternLayout">
+        <param name="ConversionPattern" value="%d [%t] %-5p %m%n" />
+      </layout>
+    </appender>
 
-		<appender name="SqlFileAppender" type="log4net.Appender.RollingFileAppender">
-			<param name="File" value="..\..\..\..\local\logs\SqlMonitor.log" />
-			<param name="AppendToFile" value="true" />
-			<param name="RollingStyle" value="Size" />
-			<param name="StaticLogFileName" value="false" />
-			<param name="MaxSizeRollBackups" value="1" />
-			<param name="MaximumFileSize" value="5MB" />
-			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
-			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern value="%date [%thread] %-5level - %message%newline" />
-			</layout>
-		</appender>
+    <appender name="SqlFileAppender" type="log4net.Appender.RollingFileAppender">
+      <param name="File" value="C:\Program Data\New Relic\MicrosoftSQLServerPlugin\SqlMonitor.log" />
+      <param name="AppendToFile" value="true" />
+      <param name="RollingStyle" value="Size" />
+      <param name="StaticLogFileName" value="false" />
+      <param name="MaxSizeRollBackups" value="1" />
+      <param name="MaximumFileSize" value="5MB" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level - %message%newline" />
+      </layout>
+    </appender>
 
-		<appender name="VerboseSqlOutputFileAppender" type="log4net.Appender.RollingFileAppender">
-			<param name="File" value="..\..\..\..\local\logs\VerboseSqlOutput.log" />
-			<param name="AppendToFile" value="true" />
-			<param name="RollingStyle" value="Size" />
-			<param name="StaticLogFileName" value="false" />
-			<param name="MaxSizeRollBackups" value="1" />
-			<param name="MaximumFileSize" value="10MB" />
-			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
-			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern value="%date [%thread] %-5level - %message%newline" />
-			</layout>
-		</appender>
+    <appender name="VerboseSqlOutputFileAppender" type="log4net.Appender.RollingFileAppender">
+      <param name="File" value="C:\Program Data\New Relic\MicrosoftSQLServerPlugin\VerboseSqlOutput.log" />
+      <param name="AppendToFile" value="true" />
+      <param name="RollingStyle" value="Size" />
+      <param name="StaticLogFileName" value="false" />
+      <param name="MaxSizeRollBackups" value="1" />
+      <param name="MaximumFileSize" value="10MB" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level - %message%newline" />
+      </layout>
+    </appender>
 
-		<appender name="VerboseMetricOutputFileAppender" type="log4net.Appender.RollingFileAppender">
-			<param name="File" value="..\..\..\..\local\logs\VerboseMetricOutput.log" />
-			<param name="AppendToFile" value="true" />
-			<param name="RollingStyle" value="Size" />
-			<param name="StaticLogFileName" value="false" />
-			<param name="MaxSizeRollBackups" value="1" />
-			<param name="MaximumFileSize" value="10MB" />
-			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
-			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern value="%date [%thread] %-5level - %message%newline" />
-			</layout>
-		</appender>
+    <appender name="VerboseMetricOutputFileAppender" type="log4net.Appender.RollingFileAppender">
+      <param name="File" value="C:\Program Data\New Relic\MicrosoftSQLServerPlugin\VerboseMetricOutput.log" />
+      <param name="AppendToFile" value="true" />
+      <param name="RollingStyle" value="Size" />
+      <param name="StaticLogFileName" value="false" />
+      <param name="MaxSizeRollBackups" value="1" />
+      <param name="MaximumFileSize" value="10MB" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level - %message%newline" />
+      </layout>
+    </appender>
 
-	</log4net>
+  </log4net>
 </configuration>
