Added MetricValueType to the MetricAttribute to set the metric type to Value or Count, overriding the CLR-type-convention Adding Units to the Metric attribute for better chart results Changed Percentage Values to be 0-100 instead of 0-1

--- a/src/NewRelic.Microsoft.SqlServer.Plugin/NewRelic.Microsoft.SqlServer.Plugin.csproj
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/NewRelic.Microsoft.SqlServer.Plugin.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Configuration\SqlServerElement.cs" />
     <Compile Include="Core\Extensions\ExtensionsForIDictionary.cs" />
     <Compile Include="Core\MetricTransformEnum.cs" />
+    <Compile Include="Core\MetricValueType.cs" />
     <Compile Include="Properties\Constants.cs" />
     <Compile Include="Core\DapperWrapper.cs" />
     <Compile Include="Core\Extensions\ExtensionsForAssembly.cs" />
