Added support for providing a 'displayName' for an included database in the configuration Metrics are sent to New Relic with the displayName value, instead of what came from the database

--- a/src/NewRelic.Microsoft.SqlServer.Plugin.Tests/NewRelic.Microsoft.SqlServer.Plugin.Tests.csproj
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin.Tests/NewRelic.Microsoft.SqlServer.Plugin.Tests.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Configuration\Log4NetTests.cs" />
     <Compile Include="Configuration\SqlServerToMonitorTests.cs" />
     <Compile Include="Core\ExtensionsForAssemblyTests.cs" />
+    <Compile Include="MetricCollectorTests.cs" />
     <Compile Include="MetricMapperTests.cs" />
     <Compile Include="ParameterizedQueryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
